@@ -8,19 +8,19 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 @Component
 public class UserService {
+
     @Autowired
     private UserRepository userRepository;
 
     private final PasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
 
     public void saveEntry(User userEntry) {
-        userEntry.setRoles(Arrays.asList("USER"));
+        userEntry.setRoles(List.of("USER"));
         userEntry.setPassword(passwordEncoder.encode(userEntry.getPassword()));
         userRepository.save(userEntry);
     }
